Fix mobile spacing.

--- a/src/modules/my/app/app.css
+++ b/src/modules/my/app/app.css
@@ -94,6 +94,10 @@ my-stl {
         margin-top: 0.5rem;
     }
 
+    .flex-item:empty {
+        margin-top: 0;
+    }
+
     .flex-spacer {
         width: 0;
     }
